Fixing layout problems

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -820,10 +820,10 @@ section #title .credits.right {
   float: right;
 }
 
-.container {
+#grid-preview {
   max-width: 1140px;
-  margin: 0 auto;
 }
+
 
 @media print, screen and (max-width: 720px) {
   #title .credits {
